Main UI
- Added three new library icons: horror, detective and humor

Reader UI
- 

Build
- 

Fixes
- 